2004-05-28  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (text_size): use iterator for all glyph strings,
	not just 1st one
	(text_size): process extra item attrs after passed attrs are
	processed so that links fg color is not lost
	(text_size): ditto
	(alloc_font): set italic to TRUE or FALSE, libgnomeprint now acts
	differently

	* htmltextslave.c (draw_normal): fixed end_index calculation for
	printer painter

2004-05-27  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (text_size): use double for width calculation to
	avoid numeric errors
	(draw_text): ditto

	* htmltextslave.c (update_lb): calculate the printer width the
	same way as for gdk painters
	(hts_fit_line): ditto

	* htmlpainter.h: removed color set from painter, we now use only
	the global one from engine. having own sets in painters caused a
	lot of pain by having to update those when global one
	updated. there were still problems with it (wrong selection color
	in test editor when switched to plain text mode and probably few
	more). updated everywhere the color set usage

	Might fix #58828

2004-05-26  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_op_copy_helper): update spell errors

	Fixes #50829

2004-05-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-save.c (html_engine_save_buffer_clear_line_breaks):
	as below

	* htmltext.c (html_text_remove_link_line_breaks): allow line
	breaks in links on white chars

	* htmltablecell.c (calc_min_width): use parent class min_width
	method instead of preferred_width

	* htmltable.c (calc_min_width): calculate preffered widths so we
	can use them when dividing span cells min width, used columnPref
	in 2nd calc_column_width_template call
	(calc_preferred_width): always call html_object_calc_min_width to
	be sure that we have columnPref table ready to use

	Fixes #58871

2004-05-24  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (save_plain): collect similar items to one long