@@ -299,11 +299,10 @@ PangoAttrList     *html_text_get_attr_list         (HTMLText              *text,
 						    gint                   end_index);
 void               html_text_calc_text_size        (HTMLText              *t,
 						    HTMLPainter           *painter,
-						    const gchar           *text,
+						    gint                   start_byte_offset,
 						    guint                  len,
 						    HTMLTextPangoInfo     *pi,
 						    GList                 *glyphs,
-						    gint                   start_byte_offset,
 						    gint                  *line_offset,
 						    GtkHTMLFontStyle       font_style,
 						    HTMLFontFace          *face,
