@@ -1,5 +1,14 @@
 2004-05-28  Radek Doulik  <rodo@ximian.com>
 
+	* htmltextslave.c: update html_text_calc_text_size calls
+	everywhere
+
+	* htmltext.c (html_text_calc_text_size): pass only
+	start_byte_offset and calculate the text here. we were sometime
+	passing wrong start_byte_offset's. the text and start_byte_offset
+	are complimentary
+	update html_text_calc_text_size calls everywhere
+
 	* htmlprinter.c (text_size): use iterator for all glyph strings,
 	not just 1st one
 	(text_size): process extra item attrs after passed attrs are
